--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,14 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
+ *
+ * Let's require the theme first, then other css files in this directory,
+ *   then the layout, then this file to override properly.
+ *
+ *= require common
+ *= require flat-ui
  *= require_tree .
+ *= require layout
+ *= require_self
  */
+
