--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <span class="span12">
         <h1 class="heading">Rentsplit</h1>
         <p>All your expense troubles, solved right ... now.</p>
-        <button class="btn btn-large btn-primary">Try it now&nbsp;→</button>
+        <%= link_to "Try it now →", new_user_registration_path, :class => "btn btn-large btn-primary" %>
       </span>
     </div>
   </div>
@@ -12,16 +12,16 @@
 <div class="container marketing-container">
   <div class="row-fluid">
     <span class="span4">
-      <h2 class="heading">Benefit One</h2>
-      <p>Product benefit number one.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla scelerisque lacinia elit, at gravida.</p>
+      <h2 class="heading">No Waste</h2>
+      <p>You all got waste? There is none here.</p>
     </span>
     <span class="span4">
-      <h2 class="heading">Benefit Two</h2>
-      <p>Product benefit number two.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla scelerisque lacinia elit, at gravida.</p>
+      <h2 class="heading">Free for Fee</h2>
+      <p>What!?!?</p>
     </span>
     <span class="span4">
-      <h2 class="heading">Benefit Three</h2>
-      <p>Product benefit number one.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla scelerisque lacinia elit, at gravida.</p>
+      <h2 class="heading">No Nodes.</h2>
+      <p>Keep your sanity.</p>
     </span>
   </div>
 </div>
