--- a/app/views/layouts/bare.html.erb
+++ b/app/views/layouts/bare.html.erb
@@ -20,12 +20,7 @@
   <%= render "common/header" %>
 
   <% # Needed for Devise %>
-  <% unless notice.blank? %>
-    <p class="notice"><%= notice %></p>
-  <% end %>
-  <% unless alert.blank? %>
-    <p class="alert"><%= alert %></p>
-  <% end %>
+  <%= render "common/notices" %>
 
   
   <%= yield %>
@@ -41,6 +36,7 @@
       // console.log(e);
       // e.stopPropagation();
     });
+    $('#error_explanation').addClass('alert alert-error');
     /* $('body').click(function(e){
       if (e.toElement.localName === 'input') {
         return;
