--- a/app/views/households/edit.html.erb
+++ b/app/views/households/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @household, :url => { :action => "update" }, :method => "put" do |f| %>
+<%= form_for @household, :method => "put" do |f| %>
   <fieldset>
     <legend>Edit Household</legend>
     <%= f.label :name %>
