--- a/app/views/households/home.html.erb
+++ b/app/views/households/home.html.erb
@@ -1,11 +1,11 @@
 <% if @households.nil? || @households.empty? %>
-  <p>No households set up yet. <%= link_to "Create one now!", households_new_path %></p>
+  <p>No households set up yet. <%= link_to "Create one now!", new_household_path %></p>
 <% else %>
   <h2>My Households</h2>
   <% @households.each do |h| %>
-    <strong><%= h.name %></strong> (<%= link_to "add and remove members", households_edit_path(h.id) %>)
+    <strong><%= h.name %></strong> (<%= link_to "edit name", edit_household_path(h.id) %>)
     <p><%= h.household_members.map{|m| m.user.first_name + " " + m.user.last_name}.join(", ") %></p>
   <% end %>
 <% end %>
 
-<%= link_to "Create new household", households_new_path %>
+<%= link_to "Create new household", new_household_path %>
