--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -105,12 +105,13 @@
 
  .container-fluid.footer {
    background: #333333;
-   padding: 30px 20px 30px 20px;
+   padding: 15px 20px;
  }
  .footer .container .row-fluid .span12 .pull-left p {
    font-weight: 300;
    color: #ffffff;
-   line-height: 36px;
+   margin-bottom: 0;
+   line-height: 30px;
  }
  .footer .container .row-fluid .span12 .nav {
    margin: 0px;
