--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,18 @@
       <div class="row-fluid">
         <span class="span12">
 
+          <!-- Just a little space. -->
+
+        </span>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row-fluid">
+        <span class="span12">
+          
+          <%= render "common/app_navigation" %>
+          
           <%= yield %>
 
         </span>
