--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -12,6 +12,11 @@
    }
 }
 
+ /* Override flat UI btn-mini, which does not change font size appropriately */
+ .btn-mini {
+   font-size: 10.5px;
+ }
+
  .alert a.close {
    text-decoration: none;
  }
@@ -19,6 +24,20 @@
  .top-space {
    margin-top: 20px; 
  }
+
+/* Make rails' default error styling bootstrap-y */
+.field_with_errors label {
+   background-color: #f2dede;
+   border-color: #eed3d7;
+   color: #b94a48;
+   padding: 8px 35px 8px 14px;
+   margin-bottom: 20px;
+   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+   border: 1px solid #eed3d7;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+}
 
 
  /* HEADER STUFF */
