Fixed so we don't display navigation when user not signed in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
       <div class="row-fluid">
         <span class="span12">
           
-          <%= render "common/app_navigation" %>
+          <% if user_signed_in? %>
+            <%= render "common/app_navigation" %>
+          <% end %>
           
           <%= yield %>
 
