Added terms of service and privacy policy

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -10,10 +10,10 @@
             <a href="#">About</a>
           </li>
           <li>
-            <a href="#">Privacy</a>
+            <%= link_to "Privacy", pages_privacy_url %>
           </li>
           <li>
-            <a href="#">Terms Of Service</a>
+            <%= link_to "Terms Of Service", pages_terms_url %>
           </li>
         </ul>
       </span>
