Updated Bills controller to save bill parts that are owed by household members, displaying them when looking at an individual bill

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -46,6 +46,10 @@
   </tbody>
 </table>
 
+<% else %>
+
+<p>No bills here yet! You guys must be really frugal.</p>
+
 <% end %>
 
 <%= link_to "Add bill you've paid", new_household_bill_path, :class => "btn btn-primary top-space" %>
