Added dynamic payment calculation

--- a/app/views/common/_app_navigation.html.erb
+++ b/app/views/common/_app_navigation.html.erb
@@ -5,7 +5,7 @@
 
   <% current_user.households.each do |household| %>
     <li class=<%= request.path.start_with?("/households/") && @current_household_id == household.id ? "active" : "" %>>
-      <%= link_to household.name, household_members_path(household.id) %>
+      <%= link_to household.name, household_payments_path(household.id) %>
     </li>
   <% end %>
 
@@ -14,12 +14,16 @@
 <% if request.path.start_with?("/households/") && !request.path.end_with?("/new") && !request.path.end_with?("/edit") %>
   <ul class="app-navigation nav nav-pills">
 
-    <li class=<%= request.path.end_with?("/members") ? "active" : "" %>>
-      <%= link_to "Members", household_members_path(@current_household_id) %>
+    <li class=<%= request.path.end_with?("/payments") || request.path.split("/").include?("payments") ? "active" : "" %>>
+      <%= link_to "Home", household_payments_path(@current_household_id) %>
     </li>
 
     <li class=<%= request.path.end_with?("/bills") || request.path.split("/").include?("bills") ? "active" : "" %>>
       <%= link_to "Bills", household_bills_path(@current_household_id) %>
+    </li>
+    
+    <li class=<%= request.path.end_with?("/members") ? "active" : "" %>>
+      <%= link_to "Members", household_members_path(@current_household_id) %>
     </li>
 
   </ul>
