--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -7,7 +7,7 @@
         </div>
         <ul class="nav nav-pills pull-right">
           <li>
-            <a href="#">About</a>
+            <%= link_to "About", pages_about_url %>
           </li>
           <li>
             <%= link_to "Privacy", pages_privacy_url %>
